--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "random-emote-react",
   "version": "0.0.0",
+  "homepage": ".",
   "description": "",
   "main": "app.js",
   "private": true,
@@ -9,13 +10,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:eslint": "eslint src/ --ext .ts --ext .js"
+    "test:eslint": "eslint src/ --ext .ts --ext .js",
+    "clean": "rimraf build/*",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "KTheXIII",
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "gh-pages": "^3.1.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.2.4"
   },
   "dependencies": {
