--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   },
   "keywords": [],
   "author": "KTheXIII",
-  "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "gh-pages": "^3.1.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.2.4"
-  },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "chart.js": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.0.1"
   },
   "browserslist": {
     "production": [
