--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -21,9 +21,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install -g pnpm
       - run: pnpm i --frozen-lockfile
-        env:
-          PUBLIC_PATH: '.'
       - run: pnpm build
+        env:
+          PUBLIC_URL: '.'
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
