--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,10 +21,12 @@ rules:
   quotes:
     - error
     - single
-  "@typescript-eslint/no-unused-vars":
+  '@typescript-eslint/no-unused-vars':
     - warn
     - vars: all
       args: none
+  '@typescript-eslint/no-empty-function':
+    - warn
   no-unused-vars:
     - warn
     - vars: all
