--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -26,7 +26,7 @@ rules:
     - vars: all
       args: none
   '@typescript-eslint/no-empty-function':
-    - warn
+    - error
   no-unused-vars:
     - warn
     - vars: all
