--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install -g pnpm
       - run: pnpm i --frozen-lockfile
+      - run: pnpm test
       - run: pnpm build
         env:
           PUBLIC_URL: '.'
