--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,10 @@
 {
   "short_name": "emotes",
   "name": "emote-reactjs",
-  "icons": [
-    {
+  "icons": [{
       "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "64x64 32x32 24x24 16x16"
     },
     {
       "src": "logo192.png",
@@ -18,7 +17,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
