--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     ],
     "allowJs": true,
     "target": "ESNext",
-    "module": "esnext",
+    "module": "ESNext",
     "baseUrl": ".",
     "rootDir": "src",
     "rootDirs": [
